# capsule

./: .envrc.template  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.fuzz.toml  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  schemaspy.properties
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml
.sqlx/: query-0172fcca626dff44dd82b5d1ed13314e0aca3fdabb00a69655a0a814e69369b9.json  query-122cfd654fa7fad49c02d104be1769fd1aeb69119a51fa95b328d0618e9402c3.json  query-1c569471caa1894d261162974bc00e9c31f7adfc29dd34c420b71e7986469753.json  query-2075a12e0695933ac76e3c8e67862fbeaebf557ed52985860200ab94f79b4ee3.json  query-2b0b00e374754ba68477a48dcaeef4debc34685d06fbdf859430861051c358af.json  query-478137677790770abacbcb6bf29515c10c19dc1ce8159dc3b085a958d33bea01.json  query-4894089224c089ff5ea365f6c66aa6e9add90477ee9ff4ef0f4a81f7db828894.json  query-539f78138e8f32fc487a5814bbe028114900c24ad51ceecee9ee252ea58d5e5b.json  query-5ab1cfb901456f7e2e492036bd517e90171f7e80eef83d0e9c38dc2cbd252da8.json  query-843ad10b6531960151f4ba4b5eb88e0e7786b7dfa09bdedcc7889f3811f7752b.json  query-8775da07a2fa84d481563b36fb5bbc9f6698d2e3d860666b6c8d83af939305c3.json  query-8a1835877a71f3c1436c35e06c2f86e7293b8a88699a34fcd5ba65ddcf965a3c.json  query-b2943747b0a227563bebf529cdd644981a26dbc635a27b3e53bf4c908043c297.json  query-b4cdfbecfc47b5ea7d8a523659b91327ee418b14d2fb11ea1656045a0ec4857f.json  query-bd06bbdb54b71e6325a55ac793d08f9848e00da22002f923aa74e021c6d60361.json  query-bf8c6f90d1f48123ebb78fdad9482b3dc77d653da543824011f8e5ad9a23c2db.json  query-c5e8327ca35d8018f65320c35802520f9b4bff625e6c5b9f13c58c6f2253ce35.json
examples/: job_runner_demo.rs
fuzz/fuzz_targets/: extractor.rs
migrations/: 20250820081846_create_types.down.sql  20250820081846_create_types.up.sql  20250820082349_create_tables_and_indexes.down.sql  20250820082349_create_tables_and_indexes.up.sql  20250824104647_update_jobs_table.down.sql  20250824104647_update_jobs_table.up.sql  20250829081421_extend_contents_table.down.sql  20250829081421_extend_contents_table.up.sql
scripts/: db-health.sh
src/: app_state.rs  health.rs  lib.rs  main.rs  passwords.rs
src/auth/: dtos.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs
src/config/: mod.rs
src/entities/: mod.rs
src/extractor/: cleaner.rs  language.rs  mod.rs  model.rs  reader.rs  reject.rs
src/extractor/tests/: mod.rs
src/extractor/tests/fixtures/: article.html  blog.html  empty.html
src/fetcher/: client.rs  errors.rs  mod.rs  pipeline.rs  types.rs
src/items/: dtos.rs  handlers.rs
src/jobs/: backoff.rs  entities.rs  handler.rs  mod.rs  registry.rs  repository.rs  worker.rs
src/jobs/handlers/: example.rs  fetch_page.rs  mod.rs
src/middleware/: mod.rs  rate_limit.rs
src/repositories/: content.rs  mod.rs  user.rs
tests/: auth_integration.rs  fetcher_client.rs  helpers.rs  job_integration.rs
