[package]
name = "capsule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99" }
uuid = { version = "1.18.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4" }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid"] }
reqwest = { version = "0.12.23", features = ["json"] }
scraper = { version = "0.24.0" }
tantivy = { version = "0.24.2" }
jsonwebtoken = { version = "9.3.1" }
argon2 = { version = "0.5.3" }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
