[package]
name = "capsule"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99" }
thiserror = { version = "2.0.16" }
uuid = { version = "1.18.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4" }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.1.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
reqwest = { version = "0.12.23", features = ["json"] }
scraper = { version = "0.24.0" }
tantivy = { version = "0.24.2" }
jsonwebtoken = { version = "9.3.1" }
argon2 = { version = "0.5.3" }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
regex = { version = "1.0" }
dashmap = { version = "6.0" }
async-trait = "0.1"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "request-id"] }

[dev-dependencies]
mockall = "0.13"
tower = "0.5"
hyper = "1.0"
