[package]
name = "capsule"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[[example]]
name = "job_runner_demo"
path = "examples/job_runner_demo.rs"

[dependencies]
anyhow = { version = "1.0.99" }
thiserror = { version = "2.0.16" }
uuid = { version = "1.18.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4" }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = { version = "0.1.0" }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
reqwest = { version = "0.12.23", features = ["json", "gzip", "brotli", "deflate"] }
scraper = { version = "0.24.0" }
url = { version = "2.5", features = ["serde"] }
bytes = { version = "1.5" }
encoding_rs = { version = "0.8" }
chardetng = { version = "0.1" }
once_cell = { version = "1.19" }
md5 = { version = "0.7" }
tantivy = { version = "0.24.2" }
jsonwebtoken = { version = "9.3.1" }
argon2 = { version = "0.5.3" }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
regex = { version = "1.0" }
dashmap = { version = "6.0" }
async-trait = "0.1"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = { version = "0.8" }
readability = "0.2"
kuchiki = "0.8"
ammonia = "3.3"
whatlang = "0.16"
linkify = "0.10"
percent-encoding = "2.3"
proptest = { version = "1", optional = true }

[dev-dependencies]
mockall = "0.13"
tower = "0.5"
hyper = "1.0"
wiremock = "0.6"
flate2 = "1.0"

[features]
fuzz = ["proptest"]
